# vtk-prompt

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: actionlint.yml  ci.yml  publish.yml
CompositeData/: CompositePolyDataMapper.py
DataManipulation/: LineOnMesh.py
GeometricObjects/: LinearCellsDemo.md
IO/: CSVReadEdit.md  CSVReadEdit.py  CSVReadEdit1.md  CSVReadEdit1.py  PolyDataToImageDataConverter.py  ReadDICOM.py  ReadDICOMSeries.md  ReadPLOT3D.py  ReadSLC.md  ReadSLC.py
Modelling/: ContourTriangulator.py
PolyData/: CellsInsideObject.md  ExtractSelectionUsingCells.py  RuledSurfaceFilter.py
Rendering/: LayeredActors.py  PBR_Mapping.md  PBR_Materials.md  TransparentBackground.py
StructuredGrid/: BlankPoint.py
UnstructuredGrid/: ClipUnstructuredGridWithPlane2.md  ClipUnstructuredGridWithPlane2.py
Utilities/: ColorMapToLUT.py  JSONColorMapToLUT.md  SelectExamples.md  SelectExamples.py  VTKModulesForCxx.py  XMLColorMapToLUT.py
Visualization/: Blow.py  FroggieSurface.py  FroggieView.py
VisualizationAlgorithms/: OfficeTube.py
data/examples/: index.json  index.txt
data/examples/CompositeData/: MultiBlockDataSet.py
data/examples/Filtering/: Delaunay2D.py
data/examples/GeometricObjects/: IsoparametricCellsDemo.md  IsoparametricCellsDemo.py  LinearCellsDemo.py  Planes.py
data/examples/IO/: ReadDICOMSeries.py  TransientHDFReader.py
data/examples/ImageProcessing/: Pad.md
data/examples/Rendering/: GradientBackground.py  LayeredActors.md  PBR_Anisotropy.md  PBR_Clear_Coat.md  PBR_Edge_Tint.md  PBR_HDR_Environment.md  PBR_Materials_Coat.md  Rotations.py  TransparentBackground.md
data/examples/UnstructuredGrid/: ClipUnstructuredGridWithPlane.md  ClipUnstructuredGridWithPlane.py
data/examples/Utilities/: ColorMapToLUT.md  JSONColorMapToLUT.py  RescaleReverseLUT.md  RescaleReverseLUT.py  Variant.py  XMLColorMapToLUT.md
data/examples/Visualization/: ShadowsLightsDemo.py
data/examples/VolumeRendering/: PseudoVolumeRendering.md
data/examples/Widgets/: ImplicitPlaneWidget2.md
data/examples/pp/: vtk  vtk3DSImporter  vtkAMRBox  vtkActor  vtkActor2D  vtkActorCollection  vtkAnnotatedCubeActor  vtkAnnotationLink  vtkAppendFilter  vtkAppendPolyData  vtkArrowSource  vtkAxes  vtkAxesActor  vtkAxis  vtkBMPReader  vtkBMPWriter  vtkBYUReader  vtkBalloonRepresentation  vtkBalloonWidget  vtkBandedPolyDataContourFilter  vtkBillboardTextActor3D  (+448 more)
prompts/: __init__.py  base_context.txt  no_rag_context.txt  python_role.txt  rag_chat_context.txt  ui_post_prompt.txt  xml_role.txt
src/vtk_prompt/: __init__.py  build_rag_db.py  generate_files.py  prompt.py  rag_chat_wrapper.py  test_rag.py  utils.js  vtk_prompt_ui.py  yaml_prompt_loader.py
(+10 files in other folders)
